@@ -1,6 +1,7 @@
 From ucommon 2.0.5 to 2.0.6
 - spec file updated per redhat/fedora packaging policies
 - fixed install scripts handling
+- added man page for ucommon-config.
 
 From ucommon 2.0.4 to 2.0.5
 - small code cleanup.
